# TicTacToe

./: .gitignore  CMakeLists.txt  README.md
inc/: AI.h
src/: AI.cpp  TicTacToe.cpp
